// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`update-block-property BlockList integration tests should batch update multiple blocks in single call 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "message": "Successfully processed 2 block update(s)",
  "results": [
    {
      "success": true,
      "contentKey": "00000000-0000-0000-0000-000000000000",
      "message": "Updated 1 of 1 properties in block at property(blocks)"
    },
    {
      "success": true,
      "contentKey": "00000000-0000-0000-0000-000000000000",
      "message": "Updated 1 of 1 properties in block at property(blocks)"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-block-property BlockList integration tests should return error with available blocks when block not found 1`] = `
{
  "content": [
    {
      "text": "{
  "success": false,
  "error": "Blocks not found",
  "message": "None of the specified blocks were found in the document",
  "notFoundBlocks": [
    {
      "contentKey": "00000000-0000-0000-0000-000000000001",
      "blockType": "content"
    }
  ],
  "availableBlocks": [
    {
      "key": "00000000-0000-0000-0000-000000000000",
      "type": "content",
      "path": "property(blocks)"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-block-property BlockList integration tests should return warning when property not found in block 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "message": "Successfully processed 1 block update(s)",
  "results": [
    {
      "success": false,
      "contentKey": "00000000-0000-0000-0000-000000000000",
      "message": "Updated 0 of 1 properties in block at property(blocks)",
      "warnings": [
        "Property 'nonExistentPropertyAlias' not found in block"
      ]
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-block-property BlockList integration tests should update property in BlockList content block 1`] = `
{
  "content": [
    {
      "text": "{
  "success": true,
  "message": "Successfully processed 1 block update(s)",
  "results": [
    {
      "success": true,
      "contentKey": "00000000-0000-0000-0000-000000000000",
      "message": "Updated 1 of 1 properties in block at property(blocks)"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-block-property error handling integration tests should handle non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error using update-block-property:
{
  "message": "Request failed with status code 404",
  "response": {
    "type": "Error",
    "title": "The document could not be found",
    "status": 404,
    "operationStatus": "ContentNotFound"
  }
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-block-property error handling integration tests should return error for non-existent document property 1`] = `
{
  "content": [
    {
      "text": "{
  "success": false,
  "error": "Property not found",
  "message": "Property 'nonExistentProperty' does not exist on this document",
  "availableProperties": [
    {
      "alias": "title",
      "culture": null,
      "segment": null,
      "editorAlias": "Umbraco.TextBox"
    }
  ]
}",
      "type": "text",
    },
  ],
}
`;

exports[`update-block-property error handling integration tests should return error for property without block structure 1`] = `
{
  "content": [
    {
      "text": "{
  "success": false,
  "error": "No block structure found",
  "message": "Property 'title' does not contain a BlockList, BlockGrid, or RichText block structure",
  "propertyValue": "Simple Text Value"
}",
      "type": "text",
    },
  ],
}
`;
